--- a/HTML/Images.html
+++ b/HTML/Images.html
@@ -3,8 +3,8 @@
 
 <h2>HTML Image</h2>
 
-<img src="https://www.google.com.vn/url?sa=i&url=https%3A%2F%2Fdienmaycholon.com%2Fkinh-nghiem-mua-sam%2Fmeme-hai&psig=AOvVaw0YPpsTzn58aGmGawt34zUE&ust=1739351977962000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPjbgpmlu4sDFQAAAAAdAAAAABAE" alt="abcabc" width="500" height="600">
-<img src="img_girl.jpg" alt="Girl in a jacket" style="width:500px;height:600px;">
+
+<img src="https://cdn.hostingviet.vn/data/images/article/hinh-nen-may-tinh-4k-1.jpg" alt="Girl in a jacket" style="width:500px;height:600px;">
 <img src="wrongname.gif" alt="Flowers in Chania">
 <img src="img_chania.jpg" alt="Flowers in Chania">
 <img src="url" alt="alternatetext">
