--- a/HTML/Image Map.html
+++ b/HTML/Image Map.html
@@ -4,7 +4,7 @@
 <h2>Image Maps</h2>
 <p>Click on the computer, the phone, or the cup of coffee to go to a new page and read more about the topic:</p>
 
-<img src="workplace.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
+<img src="https://cdn.hostingviet.vn/data/images/article/hinh-nen-may-tinh-4k-1.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
 
 <map name="workmap">
   <area shape="rect" coords="34,44,270,350" alt="Computer" href="computer.htm">
